--- a/index.html
+++ b/index.html
@@ -25,16 +25,42 @@
       <div id="gameContainer">
         <h2>Time Remaining: <span id="timeRemaining"></span></h2>
         <div id="questionDisplay">
-          <div class="question">What is the first letter of the alphabet?</div>
+            <div class="question"></div>
+          <!-- <div class="questionNumOne">What is the Italian word for pie?</div>
           <div class="answers">
-            <input type="radio" name="question-1" value="a" /> a<br />
-            <input type="radio" name="question-1" value="b" /> b<br />
-            <input type="radio" name="question-1" value="z" /> z<br />
-            <input type="radio" name="question-1" value="e" /> e
+            <input type="radio" name="question-1" value="Pizza" /> Pizza<br />
+            <input type="radio" name="question-1" value="Pasta" /> Pasta<br />
+            <input type="radio" name="question-1" value="Sausage" /> Sausage<br />
+            <input type="radio" name="question-1" value="soup" /> soup<br />
+           
+
+          <div class="questionNumTwo">What is one quarter of 1,000?</div>
+          <div class="answers">
+            <input type="radio" name="question-2" value="1500" /> 1500<br />
+            <input type="radio" name="question-2" value="2000" /> 2000<br />
+            <input type="radio" name="question-2" value="2500" /> 2500<br />
+            <input type="radio" name="question-2" value="3000" /> 3000<br /> 
+
+          <div class="questionNumThree">I have a cake and a table named after me, and I'm used all round the world. What am I?</div>
+          <div class="answers">
+              <input type="radio" name="question-3" value="Tea" /> Tea<br />
+              <input type="radio" name="question-3" value="Coffee" /> Coffee<br />
+              <input type="radio" name="question-3" value="Soup" /> Soup<br />
+              <input type="radio" name="question-3" value="Water" /> Water<br />
+
+          <div class="questionNumFour">How many players are there in a baseball team?</div>
+          <div class="answers">
+            <input type="radio" name="question-4" value="6" /> 6<br />
+            <input type="radio" name="question-4" value="7" /> 7<br />
+            <input type="radio" name="question-4" value="8" /> 8<br />
+            <input type="radio" name="question-4" value="9" /> 9<br /> -->
           </div>
         </div>
+        <button id="submit">Submit Answer</button>
+        <!-- <button onclick="submitAnswer()">Submit Answer</button> -->
+        <div id="results"></div>
       </div>
     </div>
   </body>
-  <script src="./script.js"></script>
+  <script src="app1.js"></script>
 </html>
