--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -26,41 +26,52 @@
         <h2>Time Remaining: <span id="timeRemaining"></span></h2>
         <div id="questionDisplay">
             <div class="question"></div>
-          <!-- <div class="questionNumOne">What is the Italian word for pie?</div>
-          <div class="answers">
-            <input type="radio" name="question-1" value="Pizza" /> Pizza<br />
-            <input type="radio" name="question-1" value="Pasta" /> Pasta<br />
-            <input type="radio" name="question-1" value="Sausage" /> Sausage<br />
-            <input type="radio" name="question-1" value="soup" /> soup<br />
-           
+          <div class="questionNumOne">What is the Italian word for pie?</div>
+            <div class="answers">
+              <input type="radio" name="question-1" value="Pizza" /> Pizza<br />
+              <input type="radio" name="question-1" value="Pasta" /> Pasta<br />
+              <input type="radio" name="question-1" value="Sausage" /> Sausage<br />
+              <input type="radio" name="question-1" value="soup" /> soup<br />
+            </div> 
 
-          <div class="questionNumTwo">What is one quarter of 1,000?</div>
-          <div class="answers">
-            <input type="radio" name="question-2" value="1500" /> 1500<br />
-            <input type="radio" name="question-2" value="2000" /> 2000<br />
-            <input type="radio" name="question-2" value="2500" /> 2500<br />
-            <input type="radio" name="question-2" value="3000" /> 3000<br /> 
+          <div class="questionNumTwo">What is one quarter of 10,000?</div>
+            <div class="answers">
+              <input type="radio" name="question-2" value="1500" /> 1500<br />
+              <input type="radio" name="question-2" value="2000" /> 2000<br />
+              <input type="radio" name="question-2" value="2500" /> 2500<br />
+              <input type="radio" name="question-2" value="3000" /> 3000<br /> 
+            </div>
 
           <div class="questionNumThree">I have a cake and a table named after me, and I'm used all round the world. What am I?</div>
-          <div class="answers">
-              <input type="radio" name="question-3" value="Tea" /> Tea<br />
-              <input type="radio" name="question-3" value="Coffee" /> Coffee<br />
-              <input type="radio" name="question-3" value="Soup" /> Soup<br />
-              <input type="radio" name="question-3" value="Water" /> Water<br />
+            <div class="answers">
+                <input type="radio" name="question-3" value="Tea" /> Tea<br />
+                <input type="radio" name="question-3" value="Coffee" /> Coffee<br />
+                <input type="radio" name="question-3" value="Soup" /> Soup<br />
+                <input type="radio" name="question-3" value="Water" /> Water<br />
+            </div>
 
           <div class="questionNumFour">How many players are there in a baseball team?</div>
-          <div class="answers">
-            <input type="radio" name="question-4" value="6" /> 6<br />
-            <input type="radio" name="question-4" value="7" /> 7<br />
-            <input type="radio" name="question-4" value="8" /> 8<br />
-            <input type="radio" name="question-4" value="9" /> 9<br /> -->
-          </div>
+            <div class="answers">
+              <input type="radio" name="question-4" value="6" /> 6<br />
+              <input type="radio" name="question-4" value="7" /> 7<br />
+              <input type="radio" name="question-4" value="8" /> 8<br />
+              <input type="radio" name="question-4" value="9" /> 9<br />
+            </div>
         </div>
-        <button id="submit">Submit Answer</button>
-        <!-- <button onclick="submitAnswer()">Submit Answer</button> -->
-        <div id="results"></div>
-      </div>
+
+        <button class="btn btn-success" id="submitButton">Done</button>
+        <!-- <button id="submit">Done</button> -->
+        <!-- <button onclick="submitAnswer()">Done</button> -->
+        <!-- <div id="results"></div> -->
     </div>
+    <div id = "finishContainer">
+      <h2 id = "finish">All Done</h2>
+      <div id = "correctTimes">Correct Answers:</div>
+      <div id = "incorrectTimes">Incorrect Answers:</div>
+      <div id = "unansweredTimes">Unanswered:</div>
+    </div>
+
+     
   </body>
-  <script src="app1.js"></script>
+  <script src="assets/javascript/app.js"></script>
 </html>
