update span html

--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
     </div>
     <div id = "finishContainer">
       <h2 id = "finish">All Done</h2>
-      <div id = "correctTimes">Correct Answers:</div>
+      <div>Correct Answers: <span id = "correctTimes"></span></div>
+      <div>Incorrect Answers: <span id = "incorrectTimes"></span></div>
+      <div>Unanswered: <span id = "unansweredTimes"></span></div>
+      <!-- <div id = "correctTimes">Correct Answers:</div>
       <div id = "incorrectTimes">Incorrect Answers:</div>
-      <div id = "unansweredTimes">Unanswered:</div>
+      <div id = "unansweredTimes">Unanswered:</div> -->
     </div>
 
      
