--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="title">Trivia Game</h1>
-      <button class="btn btn-success" id="startButton">Start</button>
+      <h1 id="title">Total Trivial Trivia!</h1>
+      <button class="btn" id="startButton">Start</button>
       <div id="gameContainer">
         <h2>Time Remaining: <span id="timeRemaining"></span></h2>
         <div id="questionDisplay">
